--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,25 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --background-color: #000028;
+  --background-image: url(../images/cover-image-dark.png);
+  --decor-color: #ff0070;
+  --nav-color: #ff0070;
+  --page-title-color: #db00ff;
+  --page-title-shadow-color: #ff0070;
+  --page-title-bg-color: #ff0070;
+  --page-title-desc-color: #000028;
+  --section-title-color: #ff0070;
+  --article-title-color: #000028;
+  --article-title-bg-color: #ff0070;
+  --article-text-color: #f1b2ce;
+  --article-link-shadow-color: #ff0070;
+  --article-subtitle-color: #000028;
+  --article-subtitle-bg-color: #ff0070;
+  --gallery-title-color: #000028;
+  --gallery-title-bg-color: #ff0070;
+}
+
+.page.theme_dark .header__element {
+  display: inline-block;
 }
