--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,53 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --background-color: #fff1f7;
+  --background-image: url(../images/cover-image-light.png);
+  --decor-color: #353430;
+  --nav-color: #353430;
+  --page-title-color: #ffc2e6;
+  --page-title-shadow-color: #ff8dcb;
+  --page-title-bg-color: #ff8dcb;
+  --page-title-desc-color: #353430;
+  --section-title-color: #353430;
+  --article-title-color: #353430;
+  --article-title-bg-color: #ff8dcb;
+  --article-text-color: #353430;
+  --article-link-shadow-color: #ff8dcb;
+  --article-subtitle-color: #353430;
+  --article-subtitle-bg-color: #ff8dcb;
+  --gallery-title-color: #353430;
+  --gallery-title-bg-color: #ff8dcb;
+}
+
+.page.theme_light .header__element {
+  display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+  --background-color: #fff1f7;
+  --background-image: url(../images/cover-image-light.png);
+  --background-color: #fff1f7;
+  --background-image: url(../images/cover-image-light.png);
+  --decor-color: #353430;
+  --nav-color: #353430;
+  --page-title-color: #ffc2e6;
+  --page-title-shadow-color: #ff8dcb;
+  --page-title-bg-color: #ff8dcb;
+  --page-title-desc-color: #353430;
+  --section-title-color: #353430;
+  --article-title-color: #353430;
+  --article-title-bg-color: #ff8dcb;
+  --article-text-color: #353430;
+  --article-link-shadow-color: #ff8dcb;
+  --article-subtitle-color: #353430;
+  --article-subtitle-bg-color: #ff8dcb;
+  --gallery-title-color: #353430;
+  --gallery-title-bg-color: #ff8dcb;
+}
+
+.page.theme_light .header__element {
+  display: none;
+}
 }
