--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,398 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  background-image: var(--background-image, url(../images/cover-image-dark.png));
+  background-color: var(--background-color);
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  font-family: "IBM Plex Mono", Courier, monospace;
+  min-inline-size: 375px;
+  max-inline-size: 1440px;
+  margin: 0;
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: center;
+  block-size: 100vh;
+  min-block-size: 668px;
+  padding: 10px;
+  margin-block-end: 40px;
+
+  @media (width >= 768px) {
+      margin-block-end: 60px;
+      padding-block: 20px;
+      padding-inline: 20px;
+    }
+}
+
+.decorated-zone {
+  position: relative;
+  &::before {
+  content: '';
+  position: absolute;
+  inset-inline-end: 10px;
+  inset-block-start: 10px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--decor-color, #ff0070);
+  border-right: 1px solid var(--decor-color, #ff0070);
+
+  @media (width >= 768px) {
+    inset-inline-end: 20px;
+    inset-block-start: 20px;
+  }
+}
+&::after {
+  content: '';
+  position: absolute;
+  inset-inline-start: 10px;
+  inset-block-end: 10px;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--decor-color, #ff0070);
+  border-left: 1px solid var(--decor-color, #ff0070);
+
+  @media (width >= 768px) {
+  inset-inline-start: 20px;
+  inset-block-end: 20px;
+}
+}
+}
+
+.header__element {
+  display: inline-block;
+  position: absolute;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 139%;
+  text-transform: uppercase;
+  color: var(--decor-color, #ff0070);
+  inset-inline-end: 38px;
+  inset-block-start: 10px;
+}
+
+.header__element::after {
+  content: '';
+  position: absolute;
+  background-color: var(--decor-color, #ff0070);
+  box-shadow: 0 0 4px 2px var(--decor-color, #ff0070);
+  border-radius: 50%;
+  inline-size: 9px;
+  block-size: 9px;
+  margin-left: 10px;
+  margin-top: 8px;
+  inset-inline-end: -20px;
+}
+
+@media (width >= 768px) {
+  .header__element {
+  inset-inline-end: 48px;
+  inset-block-start: 20px;
+}
+}
+
+.header__theme-menu {
+  grid-column: span 2;
+  justify-self: end;
+  align-self: center;
+
+  @media (width >= 1024px) {
+    align-self: start;
+    justify-self: center;
+  }
+}
+
+.header__theme-menu-list {
+  display: grid;
+  gap: 12px;
+
+  @media (width >= 1024px) {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+.header__theme-menu-button {
+  border: 1px solid transparent;
+  padding-block-end: 3px;
+  color: var(--nav-color, #ff0070);
+  font-size: 18px;
+  line-height: 1;
+  background-color: transparent;
+  text-transform: lowercase;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid color(from var(--nav-color, #ff0070) srgb r g b / 0.4);
+}
+
+.header__theme-menu-button:active {
+  border: 1px solid var(--nav-color, #ff0070);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--nav-color, #ff0070);
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--nav-color, #ff0070);
+  pointer-events: none;
+}
+
+.header__title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  text-shadow: 4px 4px 0 var(--page-title-shadow-color, #ff0070);
+  line-height: 0.825;
+  font-weight: 700;
+  color: var(--page-title-color, #db00ff);
+  grid-column: span 2;
+
+  @media (width >= 768px) {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    position: relative;
+    inset-inline-start: calc(-1 * var(--gap));
+  }
+}
+
+.header__paragraph {
+  grid-column: span 2;
+  align-self: center;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.3;
+  color: var(--page-title-desc-color, #000028);
+  background-color: var(--page-title-bg-color, #ff0070);
+
+  @media (width >= 768px) {
+    grid-column: 2/3;
+  }
+}
+
+.main {
+  display: grid;
+  gap: 50px;
+  margin-block-end: 40px;
+  padding-inline: 10px;
+
+  @media (width >= 768px) {
+    margin-block-end: 60px;
+    padding-inline: 20px;
+    gap: 80px;
+  }
+}
+
+.main__section {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.main__article {
+  display: grid;
+}
+
+.main__section-title {
+  font-weight: 700;
+  line-height: 1.3;
+  font-size: 18px;
+  color: var(--section-title-color, #ff0070);
+}
+
+.main__section-lists {
+  display: grid;
+  gap: 20px;
+
+  @media (width >= 768px) {
+    grid-column: 2/-1;
+  }
+}
+
+.main__section-lists-item-title {
+  font-size: 18px;
+  line-height: 1.3;
+  inline-size: 100%;
+  display: flex;
+  margin-block-end: 10px;
+  color: var(--article-title-color, #000028);
+  background-color: var(--article-title-bg-color, #ff0070);
+}
+
+.main__section-lists-item-subtitle {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.3;
+  color: var(--article-text-color, #f1b2ce);
+  margin-block-end: 20px;
+}
+
+.main__section-lists-item-subtitle:last-child {
+  margin-block-end: 0;
+}
+
+.main__section-lists-item-link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--article-link-shadow-color, #ff0070);
+}
+
+.main__section-lists-item-link:hover {
+  border-block-end: 1px solid currentColor;
+}
+
+.main__section-lists-item-link:focus {
+  outline: none;
+}
+
+.main__section-lists-item-link:focus-visible {
+  outline-offset: 1px;
+  outline: 1px solid currentColor;
+}
+
+.main__section-list {
+  padding-block-start: 10px;
+}
+
+.main__section-list-item {
+  margin-block-end: 20px;
+}
+
+.main__section-list-item:last-child {
+  margin-block-end: 0;
+}
+
+.main__section-lists-item-second {
+  font-weight: normal;
+}
+
+.content__section.gallery {
+  display: grid;
+  gap: 10px;
+
+  @media (width >= 768px) {
+  gap: 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+}
+
+.main__section-image {
+  display: block;
+  object-position: center;
+  object-fit: cover;
+  block-size: 100%;
+  inline-size: 100%
+}
+
+.gallery.main__section-lists {
+  gap: 10px;
+  grid-auto-flow: dense;
+}
+
+.footer {
+  display: grid;
+  block-size: 100vh;
+  justify-items: center;
+}
+
+.footer_text {
+  align-self: center;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  text-shadow: 4px 4px 0 var(--page-title-shadow-color, #ff0070);
+  line-height: 0.825;
+  font-weight: 700;
+  color: var(--page-title-color, #db00ff);
+  grid-column: span 2;
+
+  @media (width >= 768px) {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
+
+@media (width >= 768px) {
+  .main__section.first {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .main__section.second {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .main__section.third {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .content__section.gallery {
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+  }
+
+  .gallery.main__section-title {
+    grid-column: 1/-1;
+  }
+
+  .gallery.main__section-lists {
+    grid-column: 1/-1;
+    gap: 20px;
+  }
+  .main__section-image {
+    object-fit: cover;
+  }
+
+  .main__section-image:nth-of-type(1) {
+    grid-column: span 2;
+    grid-row: 1;
+  }
+
+  .main__section-image:nth-of-type(2) {
+    grid-column: 3 / 4;
+    grid-row: span 2;
+  }
+
+  .main__section-image:nth-of-type(3) {
+    grid-column: 1;
+    grid-row: 2 / 4;
+  }
+  
+  .main__section-image:nth-of-type(5) {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+  }
+
+  .second.main__section-lists {
+    grid-column: 1/-1;
+  }
+
+  .second.main__section-title {
+    grid-column: 1;
+  }
+}
+
+@media (width >= 1024px) {
+  .main__section.first {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .main__section.second {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .main__section.third {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .second.main__section-lists {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .third.main__article {
+    grid-column: 2/-1;
+  }
 }
