--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,31 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --background-color: #000028;
+  --background-image: url(../images/cover-image-dark.png);
+  --font-family: 'IBM Plex Mono', sans-serif;
+  --decor-color: #ff0070;
+  --nav-color: #ff0070;
+  --page-title-color: #db00ff;
+  --page-title-shadow-color: #ff0070;
+  --page-title-bg-color: #ff0070;
+  --page-title-desc-color: #000028;
+  --section-title-color: #ff0070;
+  --article-title-color: #000028;
+  --article-title-bg-color: #ff0070;
+  --article-text-color: #f1b2ce;
+  --article-link-shadow-color: #ff0070;
+  --article-subtitle-color: #000028;
+  --article-subtitle-bg-color: #ff0070;
+  --gallery-title-color: #000028;
+  --gallery-title-bg-color: #ff0070;
+  --gap: 10px;
+}
+
+@media (width >= 768px) {
+  :root {
+    --gap: 20px;
+  }
+}
