--- a/styles/style.css
+++ b/styles/style.css
@@ -221,7 +221,7 @@
   font-size: 18px;
   line-height: 1.3;
   inline-size: 100%;
-  display: flex;
+  display: inline-block;
   margin-block-end: 10px;
   color: var(--article-title-color, #000028);
   background-color: var(--article-title-bg-color, #ff0070);
@@ -273,7 +273,7 @@
   font-weight: normal;
 }
 
-.content__section.gallery {
+.gallery.main__section-lists{
   display: grid;
   gap: 10px;
 
@@ -335,33 +335,35 @@
   }
 
   .gallery.main__section-title {
-    grid-column: 1/-1;
+    grid-column: 1 / -1;
   }
 
   .gallery.main__section-lists {
-    grid-column: 1/-1;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
     gap: 20px;
   }
-  .main__section-image {
-    object-fit: cover;
-  }
 
-  .main__section-image:nth-of-type(1) {
+  .gallery .main__section-lists-item {
+    display: grid;
+  }
+  
+  .gallery .main__section-item:nth-of-type(1) {
     grid-column: span 2;
     grid-row: 1;
   }
 
-  .main__section-image:nth-of-type(2) {
+  .gallery .main__section-item:nth-of-type(2) {
     grid-column: 3 / 4;
     grid-row: span 2;
   }
 
-  .main__section-image:nth-of-type(3) {
+  .gallery .main__section-item:nth-of-type(3) {
     grid-column: 1;
     grid-row: 2 / 4;
   }
-  
-  .main__section-image:nth-of-type(5) {
+
+  .gallery .main__section-item:nth-of-type(5) {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
   }
@@ -389,10 +391,15 @@
   }
 
   .second.main__section-lists {
+    grid-auto-flow: column;
     grid-template-columns: 1fr 1fr 1fr;
   }
 
   .third.main__article {
     grid-column: 2/-1;
+  }
+
+  .gallery.main__section-lists-item-title {
+    display: flex;
   }
 }
